# qt.debian-apt-analyzer

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-template  build.cmake  main.cpp  mainwindow.cpp
NetworkRequest/: CMakeLists.txt
QtPrivateDeclar/: CMakeLists.txt  QtPrivateDeclar.cpp  QtPrivateDeclar.h
QuickTemplateObject/: CMakeLists.txt  QuickTemplateObject  QuickTemplateObject.cpp  QuickTemplateObject.h
cmake/: BaseBuildConfig.cmake  BuildFeatureConfig.cmake  SparkWithGit.cmake  spark-deb-package.descript
docs/: apt-source.py  deepin-apricot-Release.txt  kylin-all-Release.txt  resource.json
docs/deepin-20/: apt-sources.list
docs/deepin-23/: apt-sources.list
docs/kylin/: apt-sources.list
docs/uos-kirin990/: apt-sources.list
res/: distributions.txt  light.css  res.qrc
src/: main.cpp
src/widgets/: aptanalyzerwindow.cpp  aptanalyzerwindow.h  aptanalyzerwindow.ui  selectionitem.cpp  selectionitem.h  selectionitem.ui
